# vktlc

./: .gitignore  .gitmodules  CMakeDoxyfile.in  CMakeDoxygenDefaults.cmake  CMakeLists.txt  README.md
assets/shaders/: compile.bat
assets/shaders/presentation/: vert.glsl
assets/standard/shaders/: vert.glsl
assets/standard/shaders/presentation/: frag.glsl  vert.glsl
dep/imguibuilder/: CMakeLists.txt
shaders/: frag.glsl  vert.glsl
tlc/: Main.cpp
tlc/containers/: RingBuffer.hpp
tlc/core/: Application.cpp  Application.hpp  Core.hpp  EventManager.cpp  EventManager.hpp  Hasher.hpp  Logger.cpp  Logger.hpp  Types.hpp  Utils.cpp  Utils.hpp  Uuid.cpp  Uuid.hpp  Window.cpp  Window.hpp
tlc/engine/: Scene.cpp  Scene.hpp
tlc/engine/ecs/: Component.cpp  Component.hpp  ComponentsQuery.hpp  ECS.hpp  ECSBase.cpp  ECSBase.hpp  Entity.cpp  Entity.hpp  System.hpp
tlc/game/: Game.cpp  Game.hpp  RegisterAssets.cpp  RegisterServices.cpp
tlc/game/components/: TriangleLeftRight.cpp  TriangleLeftRight.hpp  TriangleUpDown.cpp  TriangleUpDown.hpp
tlc/game/scenes/: MainScene.cpp  MainScene.hpp  TestScene.cpp  TestScene.hpp
tlc/rendering/: Renderer.cpp  Renderer.hpp
tlc/services/: CacheManager.hpp  CacheManagerService.cpp  DebugUIManager.hpp  DebugUIService.cpp  Services.cpp  Services.hpp  ShaderCompiler.hpp  ShaderCompilerService.cpp  StatisticsManager.hpp  StatisticsManagerService.cpp
tlc/services/assetmanager/: Asset.hpp  AssetBundler.hpp  AssetBundlerService.cpp  AssetManager.hpp  AssetManagerService.cpp
tlc/services/renderer/: DebugUIManager.cpp  DebugUIManager.hpp  DebugUIManagerService.cpp  PresentationRenderer.hpp  PresentationRendererService.cpp  VulkanManager.hpp  VulkanManagerService.cpp
tlc/utils/: StringUtils.cpp  StringUtils.hpp  Utils.hpp
tlc/vulkan/: VulkanBase.hpp  VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanCommandBuffer.cpp  VulkanCommandBuffer.hpp  VulkanContext.cpp  VulkanContext.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanFramebuffer.cpp  VulkanFramebuffer.hpp  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.hpp  VulkanShader.cpp  VulkanShader.hpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp
tlc/vulkanapi/: VulkanBase.hpp  VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanCommandBuffer.cpp  VulkanCommandBuffer.hpp  VulkanContext.cpp  VulkanContext.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanFramebuffer.cpp  VulkanFramebuffer.hpp  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.hpp  VulkanImage.cpp  VulkanImage.hpp  VulkanShader.cpp  VulkanShader.hpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp
